--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-  <h1 id="level-title">Press A Key to Start</h1>
+  <a class="ins" href="ins.html">How to play?</a>
+  <h1 class="start" id="level-title">Press A Key or <a href="#" class="click">click here</a> to Start</h1>
+
   <div class="container">
     <div lass="row">
 
